Blender 2.8 crashes when attempting to render. EEVEE #57890

Closed
opened 2018-11-17 14:33:43 +01:00 by sandeep · 18 comments

Windows 10
Intel I5, Nvidia 750TI
8GB Ram
Latest Nvidia Graphics Driver

Blender Version
Blender 2.8 Alpha
11/16/2018 release

Short description of error
Crashing
newspiderw2.8.blend

Exact steps for others to reproduce the error
Blender simply crashes within few seconds after i attempt to render the scene in eevee

Windows 10 Intel I5, Nvidia 750TI 8GB Ram Latest Nvidia Graphics Driver **Blender Version** Blender 2.8 Alpha 11/16/2018 release **Short description of error** Crashing [newspiderw2.8.blend](https://archive.blender.org/developer/F5601883/newspiderw2.8.blend) **Exact steps for others to reproduce the error** Blender simply crashes within few seconds after i attempt to render the scene in eevee
Author

Added subscriber: @sandy1984

Added subscriber: @sandy1984
sandeep changed title from Blender 2.8 crashes when attempting to render. to Blender 2.8 crashes when attempting to render. EEVEE 2018-11-17 14:36:16 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

No crash here.
But I do get a couple of freestyle related errors/warnings

Error executing Python script from PythonInterpreter::interpretString
Name: LegoSolidWhiteLines
Errors: 
Error: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/bin/2.80/scripts/freestyle/modules/parameter_editor.py", line 1292, in process
    Operators.select(upred)
  File "/bin/2.80/scripts/freestyle/modules/freestyle/predicates.py", line 245, in __call__
    return all(pred(inter) for pred in self.predicates)
  File "/bin/2.80/scripts/freestyle/modules/freestyle/predicates.py", line 245, in <genexpr>
    return all(pred(inter) for pred in self.predicates)
  File "/bin/2.80/scripts/freestyle/modules/parameter_editor.py", line 935, in __call__
    found = self.getViewShapeName(viewEdge.viewshape) in self.names
  File "/bin/2.80/scripts/freestyle/modules/parameter_editor.py", line 932, in getViewShapeName
    return vs.name
UnicodeDecodeError: 'utf-8' codec can't decode byte 0xbb in position 0: invalid start byte

location: <unknown location>:-1

Error: interpretation failed
add freestyle
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: edge 257 - 285 appears twice, correcting
Warning: edge 285 - 286 appears twice, correcting
Warning: edge 286 - 287 appears twice, correcting
Warning: edge 287 - 157 appears twice, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: edge 256 - 284 appears twice, correcting
Warning: edge 284 - 285 appears twice, correcting
Warning: edge 285 - 286 appears twice, correcting
Warning: edge 286 - 157 appears twice, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: edge 237 - 422 appears twice, correcting
Warning: edge 422 - 424 appears twice, correcting
Warning: edge 424 - 261 appears twice, correcting
Warning: edge 261 - 136 appears twice, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: degenerated triangle detected, correcting
Warning: edge 236 - 421 appears twice, correcting
Warning: edge 421 - 423 appears twice, correcting
Warning: edge 423 - 260 appears twice, correcting
Warning: edge 260 - 136 appears twice, correctin

Just to narrow it down a bit:
@sandy1984: do you get crashes without freestyle as well?

No crash here. But I do get a couple of freestyle related errors/warnings ``` Error executing Python script from PythonInterpreter::interpretString Name: LegoSolidWhiteLines Errors: Error: Traceback (most recent call last): File "<string>", line 1, in <module> File "/bin/2.80/scripts/freestyle/modules/parameter_editor.py", line 1292, in process Operators.select(upred) File "/bin/2.80/scripts/freestyle/modules/freestyle/predicates.py", line 245, in __call__ return all(pred(inter) for pred in self.predicates) File "/bin/2.80/scripts/freestyle/modules/freestyle/predicates.py", line 245, in <genexpr> return all(pred(inter) for pred in self.predicates) File "/bin/2.80/scripts/freestyle/modules/parameter_editor.py", line 935, in __call__ found = self.getViewShapeName(viewEdge.viewshape) in self.names File "/bin/2.80/scripts/freestyle/modules/parameter_editor.py", line 932, in getViewShapeName return vs.name UnicodeDecodeError: 'utf-8' codec can't decode byte 0xbb in position 0: invalid start byte location: <unknown location>:-1 Error: interpretation failed ``` ``` add freestyle Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: edge 257 - 285 appears twice, correcting Warning: edge 285 - 286 appears twice, correcting Warning: edge 286 - 287 appears twice, correcting Warning: edge 287 - 157 appears twice, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: edge 256 - 284 appears twice, correcting Warning: edge 284 - 285 appears twice, correcting Warning: edge 285 - 286 appears twice, correcting Warning: edge 286 - 157 appears twice, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: edge 237 - 422 appears twice, correcting Warning: edge 422 - 424 appears twice, correcting Warning: edge 424 - 261 appears twice, correcting Warning: edge 261 - 136 appears twice, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: degenerated triangle detected, correcting Warning: edge 236 - 421 appears twice, correcting Warning: edge 421 - 423 appears twice, correcting Warning: edge 423 - 260 appears twice, correcting Warning: edge 260 - 136 appears twice, correctin ``` Just to narrow it down a bit: @sandy1984: do you get crashes **without** freestyle as well?
Member

Will (temporarily) mark this as incomplete until we have an answer to narrow it down...

Will (temporarily) mark this as incomplete until we have an answer to narrow it down...
Author

Yes now it renders fine without freestyle enabled.

Yes now it renders fine without freestyle enabled.

Added subscriber: @ravindrasuthar

Added subscriber: @ravindrasuthar

I have same problems i.e. Blender simply crashes within few seconds after i attempt to render the scene in eevee also on clicking on Render icon.
I m using Blender 2.8 Beta , release date 22.12.2018 in my Laptop Window 7 professional, 4 GB RAM.

I have same problems i.e. Blender simply crashes within few seconds after i attempt to render the scene in eevee also on clicking on Render icon. I m using Blender 2.8 Beta , release date 22.12.2018 in my Laptop Window 7 professional, 4 GB RAM.

This issue was referenced by bd5394f6c0

This issue was referenced by bd5394f6c0bec4eb969aa8bd24b072d7dd9ab04d
Brecht Van Lommel self-assigned this 2019-01-04 17:40:07 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @dfelinto

Added subscriber: @dfelinto

@brecht For the records, I still run into a crash with this file (and any other eevee file actually).

For this particular file I get:
SUMMARY: AddressSanitizer: heap-use-after-free /home/dfelinto/src/blender/blender/source/blender/gpu/intern/gpu_texture.c:1351 in GPU_texture_bound_number
Full backtrace: P882

It only happens with my debug build, so I believe it is related to one of my building options. I'm running some tests with build options here.

For factory startup + enabling freestyle for eevee and F12 I get:
SUMMARY: AddressSanitizer: heap-use-after-free /home/dfelinto/src/blender/blender/source/blender/blenkernel/intern/layer.c:703 in layer_collection_sync
Full backtrace: P883

@brecht For the records, I still run into a crash with this file (and any other eevee file actually). For this particular file I get: `SUMMARY: AddressSanitizer: heap-use-after-free /home/dfelinto/src/blender/blender/source/blender/gpu/intern/gpu_texture.c:1351 in GPU_texture_bound_number` Full backtrace: [P882](https://archive.blender.org/developer/P882.txt) It only happens with my debug build, so I believe it is related to one of my building options. I'm running some tests with build options here. For factory startup + enabling freestyle for eevee and F12 I get: `SUMMARY: AddressSanitizer: heap-use-after-free /home/dfelinto/src/blender/blender/source/blender/blenkernel/intern/layer.c:703 in layer_collection_sync` Full backtrace: [P883](https://archive.blender.org/developer/P883.txt)

@brecht did you try with an asan build? It seems that by simply turning on ASAN I'm getting the issues mentioned above. It can be an ASAN false positive too, of course.

@brecht did you try with an asan build? It seems that by simply turning on ASAN I'm getting the issues mentioned above. It can be an ASAN false positive too, of course.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Added subscriber: @drivehappy

Added subscriber: @drivehappy

I ran into a read access violation around the same area @dfelinto observed, although seemingly with different reproduce steps. This occurred under a Debug Win x64 build when texture painting, and appears to trigger if I paint then perform an undo:

Exception thrown: read access violation.
**tex** was 0x1BC43218F48.

Stack trace:

>	blender.exe!GPU_texture_bound_number(GPUTexture * tex) Line 1351	C

 	blender.exe!bind_texture(GPUTexture * tex, unsigned char bind_type) Line 897	C
 	blender.exe!draw_shgroup(DRWShadingGroup * shgroup, DRWState pass_state) Line 1097	C
 	blender.exe!drw_draw_pass_ex(DRWPass * pass, DRWShadingGroup * start_group, DRWShadingGroup * end_group) Line 1320	C
 	blender.exe!DRW_draw_pass(DRWPass * pass) Line 1352	C
 	blender.exe!workbench_deferred_draw_scene(WORKBENCH_Data * vedata) Line 999	C
 	blender.exe!workbench_solid_draw_background(void * vedata) Line 69	C
 	blender.exe!drw_engines_draw_background() Line 1063	C
 	blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * ar, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1519	C
 	blender.exe!DRW_draw_view(const bContext * C) Line 1420	C
 	blender.exe!view3d_draw_view(const bContext * C, ARegion * ar) Line 1343	C
 	blender.exe!view3d_main_region_draw(const bContext * C, ARegion * ar) Line 1365	C
 	blender.exe!ED_region_do_draw(bContext * C, ARegion * ar) Line 518	C
 	blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 581	C
 	blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 715	C
 	blender.exe!wm_draw_update(bContext * C) Line 868	C
 	blender.exe!WM_main(bContext * C) Line 434	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 525	C
 	~snip~

This was with Application Verifier enabled (although I don't think it helped in this case). NVidia GTX 960M (driver version 25.21.14.1681).

I ran into a read access violation around the same area @dfelinto observed, although seemingly with different reproduce steps. This occurred under a Debug Win x64 build when texture painting, and appears to trigger if I paint then perform an undo: ``` Exception thrown: read access violation. **tex** was 0x1BC43218F48. ``` Stack trace: ``` > blender.exe!GPU_texture_bound_number(GPUTexture * tex) Line 1351 C blender.exe!bind_texture(GPUTexture * tex, unsigned char bind_type) Line 897 C blender.exe!draw_shgroup(DRWShadingGroup * shgroup, DRWState pass_state) Line 1097 C blender.exe!drw_draw_pass_ex(DRWPass * pass, DRWShadingGroup * start_group, DRWShadingGroup * end_group) Line 1320 C blender.exe!DRW_draw_pass(DRWPass * pass) Line 1352 C blender.exe!workbench_deferred_draw_scene(WORKBENCH_Data * vedata) Line 999 C blender.exe!workbench_solid_draw_background(void * vedata) Line 69 C blender.exe!drw_engines_draw_background() Line 1063 C blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * ar, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1519 C blender.exe!DRW_draw_view(const bContext * C) Line 1420 C blender.exe!view3d_draw_view(const bContext * C, ARegion * ar) Line 1343 C blender.exe!view3d_main_region_draw(const bContext * C, ARegion * ar) Line 1365 C blender.exe!ED_region_do_draw(bContext * C, ARegion * ar) Line 518 C blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 581 C blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 715 C blender.exe!wm_draw_update(bContext * C) Line 868 C blender.exe!WM_main(bContext * C) Line 434 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 525 C ~snip~ ``` This was with Application Verifier enabled (although I don't think it helped in this case). NVidia GTX 960M (driver version 25.21.14.1681).

@sandy1984 I just committed a fix for freestyle rendering. Could you please check if you still have the original issue reported here?

@sandy1984 I just committed a fix for freestyle rendering. Could you please check if you still have the original issue reported here?
Author

In #57890#607219, @dfelinto wrote:
@sandy1984 I just committed a fix for freestyle rendering. Could you please check if you still have the original issue reported here?

It Renders fine now. Thanks alot

> In #57890#607219, @dfelinto wrote: > @sandy1984 I just committed a fix for freestyle rendering. Could you please check if you still have the original issue reported here? It Renders fine now. Thanks alot

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57890
No description provided.