Fix T57890: freestyle rendering crash.

Depsgraph objects are deleted after conversion to Freestyle data structures,
so don't keep a pointer to their name strings.